force-app/main/default/objects/Client_Strategy__c/Client_Strategy__c.object-meta.xml
<CustomObject>
    <label>Client Strategy</label>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Client Strategy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Strategies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>