force-app/main/default/objects/Client_Strategy__c/fields/ACO_Centric_Networks__c.field-meta.xml
<CustomField>
    <fullName>ACO_Centric_Networks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ACO Centric Networks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>