force-app/main/default/objects/Client_Strategy__c/fields/Additional_factors__c.field-meta.xml
<CustomField>
    <fullName>Additional_factors__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional factors</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>