force-app/main/default/objects/Client_Strategy__c/fields/Administrative_capabilities__c.field-meta.xml
<CustomField>
    <fullName>Administrative_capabilities__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Administrative capabilities</label>
    <length>255</length>
    <type>Text</type>
</CustomField>