force-app/main/default/objects/Client_Strategy__c/fields/Advanced_Primary_Care_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Primary_Care_Strategy__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Advanced Primary Care Strategy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>