force-app/main/default/objects/Client_Strategy__c/fields/Affordability_programs__c.field-meta.xml
<CustomField>
    <fullName>Affordability_programs__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Affordability programs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>