force-app/main/default/objects/Client_Strategy__c/fields/Affordability_solutions__c.field-meta.xml
<CustomField>
    <fullName>Affordability_solutions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Affordability solutions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>