force-app/main/default/objects/Client_Strategy__c/fields/Annual_open_enrollment_kit_shared__c.field-meta.xml
<CustomField>
    <fullName>Annual_open_enrollment_kit_shared__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Annual open enrollment kit shared</label>
    <length>255</length>
    <type>Text</type>
</CustomField>