force-app/main/default/objects/Client_Strategy__c/fields/Annual_Open_Kit_Shared_Write_In__c.field-meta.xml
<CustomField>
    <fullName>Annual_Open_Kit_Shared_Write_In__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Annual Open Kit Shared Write In</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>