force-app/main/default/objects/Client_Strategy__c/fields/Approach_to_delivering_member_comms__c.field-meta.xml
<CustomField>
    <fullName>Approach_to_delivering_member_comms__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approach to delivering member comms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>