force-app/main/default/objects/Client_Strategy__c/fields/Approach_to_targeted_messaging__c.field-meta.xml
<CustomField>
    <fullName>Approach_to_targeted_messaging__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approach to targeted messaging</label>
    <length>255</length>
    <type>Text</type>
</CustomField>