force-app/main/default/objects/Client_Strategy__c/fields/Bariatric_COE__c.field-meta.xml
<CustomField>
    <fullName>Bariatric_COE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bariatric COE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>