force-app/main/default/objects/Client_Strategy__c/fields/Behavioral_Health_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Behavioral_Health_Engagement__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Behavioral Health Engagement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>