force-app/main/default/objects/Client_Strategy__c/fields/Behavioral_health_programs__c.field-meta.xml
<CustomField>
    <fullName>Behavioral_health_programs__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Behavioral health programs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>