force-app/main/default/objects/Client_Strategy__c/fields/Biosimilar_steerage__c.field-meta.xml
<CustomField>
    <fullName>Biosimilar_steerage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Biosimilar steerage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>