force-app/main/default/objects/Client_Strategy__c/fields/Brand_Image__c.field-meta.xml
<CustomField>
    <fullName>Brand_Image__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Brand Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>