force-app/main/default/objects/Client_Strategy__c/fields/Burnout_stress_management_programs__c.field-meta.xml
<CustomField>
    <fullName>Burnout_stress_management_programs__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Burnout,stress management programs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>