force-app/main/default/objects/Client_Strategy__c/fields/Cancer_Screening_and_Support_Programs__c.field-meta.xml
<CustomField>
    <fullName>Cancer_Screening_and_Support_Programs__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cancer Screening and Support Programs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>