force-app/main/default/objects/Client_Strategy__c/fields/Cancer_screenings__c.field-meta.xml
<CustomField>
    <fullName>Cancer_screenings__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cancer Screenings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>