force-app/main/default/objects/Client_Strategy__c/fields/Cash_price_into_member_benefit__c.field-meta.xml
<CustomField>
    <fullName>Cash_price_into_member_benefit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cash price into member benefit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>