force-app/main/default/objects/Client_Strategy__c/fields/CDHP_full_replacement__c.field-meta.xml
<CustomField>
    <fullName>CDHP_full_replacement__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CDHP full replacement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>