force-app/main/default/objects/Client_Strategy__c/fields/Client_active_role_in_communication__c.field-meta.xml
<CustomField>
    <fullName>Client_active_role_in_communication__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client active role in communication</label>
    <length>255</length>
    <type>Text</type>
</CustomField>