force-app/main/default/objects/Client_Strategy__c/fields/Client_attitude_on_engagement__c.field-meta.xml
<CustomField>
    <fullName>Client_attitude_on_engagement__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client attitude on engagement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>