force-app/main/default/objects/Client_Strategy__c/fields/Client_experience_and_support__c.field-meta.xml
<CustomField>
    <fullName>Client_experience_and_support__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client experience and support</label>
    <length>255</length>
    <type>Text</type>
</CustomField>