force-app/main/default/objects/Client_Strategy__c/fields/Client_Interest_or_attitude_in_SoDH__c.field-meta.xml
<CustomField>
    <fullName>Client_Interest_or_attitude_in_SoDH__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Interest or attitude in SoDH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>