force-app/main/default/objects/Client_Strategy__c/fields/Client_rethinking_wellness_approach__c.field-meta.xml
<CustomField>
    <fullName>Client_rethinking_wellness_approach__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client rethinking wellness approach</label>
    <length>255</length>
    <type>Text</type>
</CustomField>