force-app/main/default/objects/Client_Strategy__c/fields/Co_Pay_insurance__c.field-meta.xml
<CustomField>
    <fullName>Co_Pay_insurance__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Co-Pay insurance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>