force-app/main/default/objects/Client_Strategy__c/fields/Commitment_to_culture_of_health__c.field-meta.xml
<CustomField>
    <fullName>Commitment_to_culture_of_health__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Commitment to culture of health</label>
    <length>255</length>
    <type>Text</type>
</CustomField>