force-app/main/default/objects/Client_Strategy__c/fields/Communication_resource_available__c.field-meta.xml
<CustomField>
    <fullName>Communication_resource_available__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Communication resource available</label>
    <length>255</length>
    <type>Text</type>
</CustomField>