force-app/main/default/objects/Client_Strategy__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Strategies</relationshipLabel>
    <relationshipName>Client_Strategies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>