force-app/main/default/objects/Client_Strategy__c/fields/Competitive_landscape_updated__c.field-meta.xml
<CustomField>
    <fullName>Competitive_landscape_updated__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Competitive landscape updated</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>