force-app/main/default/objects/Client_Strategy__c/fields/Completion_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Completion Date/Time</label>
    <type>DateTime</type>
</CustomField>