force-app/main/default/objects/Client_Strategy__c/fields/Concierge_advocacy__c.field-meta.xml
<CustomField>
    <fullName>Concierge_advocacy__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Concierge advocacy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>