force-app/main/default/objects/Client_Strategy__c/fields/Critical_affordability_drug_lists__c.field-meta.xml
<CustomField>
    <fullName>Critical_affordability_drug_lists__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Critical affordability drug lists</label>
    <length>255</length>
    <type>Text</type>
</CustomField>