force-app/main/default/objects/Client_Strategy__c/fields/Data_analysis_and_reporting__c.field-meta.xml
<CustomField>
    <fullName>Data_analysis_and_reporting__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data analysis and reporting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>