force-app/main/default/objects/Client_Strategy__c/fields/Data_warehouse__c.field-meta.xml
<CustomField>
    <fullName>Data_warehouse__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data warehouse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>