force-app/main/default/objects/Client_Strategy__c/fields/Describe_Network_features__c.field-meta.xml
<CustomField>
    <fullName>Describe_Network_features__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Describe Network features</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>