force-app/main/default/objects/Client_Strategy__c/fields/Did_Not_Earn_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Did_Not_Earn_Incentive__c</fullName>
    <label>Did Not Earn Incentive</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>