force-app/main/default/objects/Client_Strategy__c/fields/Digital_condition_mgmt__c.field-meta.xml
<CustomField>
    <fullName>Digital_condition_mgmt__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Digital condition mgmt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>