force-app/main/default/objects/Client_Strategy__c/fields/Direct_Contracting_with_a_Provider__c.field-meta.xml
<CustomField>
    <fullName>Direct_Contracting_with_a_Provider__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Direct Contracting with a Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>