force-app/main/default/objects/Client_Strategy__c/fields/Diversity_equity_and_inclusion__c.field-meta.xml
<CustomField>
    <fullName>Diversity_equity_and_inclusion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Diversity, equity, and inclusion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>