force-app/main/default/objects/Client_Strategy__c/fields/Doesnt_UHC_Optum_reason_Write_In__c.field-meta.xml
<CustomField>
    <fullName>Doesnt_UHC_Optum_reason_Write_In__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Doesnt UHC/Optum reason Write In</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>