force-app/main/default/objects/Client_Strategy__c/fields/EAP_Modernization__c.field-meta.xml
<CustomField>
    <fullName>EAP_Modernization__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EAP Modernization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>