force-app/main/default/objects/Client_Strategy__c/fields/Earned_Full_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Earned_Full_Incentive__c</fullName>
    <label>Earned Full Incentive</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>