force-app/main/default/objects/Client_Strategy__c/fields/Earned_Partial_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Earned_Partial_Incentive__c</fullName>
    <label>Earned Partial Incentive</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>