force-app/main/default/objects/Client_Strategy__c/fields/Electronic_prescribing_integration__c.field-meta.xml
<CustomField>
    <fullName>Electronic_prescribing_integration__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Electronic prescribing integration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>