force-app/main/default/objects/Client_Strategy__c/fields/Employee_affordability__c.field-meta.xml
<CustomField>
    <fullName>Employee_affordability__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employee affordability</label>
    <length>255</length>
    <type>Text</type>
</CustomField>