force-app/main/default/objects/Client_Strategy__c/fields/Engagement_Platform_Adoption__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Platform_Adoption__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Engagement Platform Adoption</label>
    <length>255</length>
    <type>Text</type>
</CustomField>