force-app/main/default/objects/Client_Strategy__c/fields/ESG_Issues__c.field-meta.xml
<CustomField>
    <fullName>ESG_Issues__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ESG Issues</label>
    <length>255</length>
    <type>Text</type>
</CustomField>