force-app/main/default/objects/Client_Strategy__c/fields/Family_Special_Needs__c.field-meta.xml
<CustomField>
    <fullName>Family_Special_Needs__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Family Special Needs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>