force-app/main/default/objects/Client_Strategy__c/fields/Fees_and_credits__c.field-meta.xml
<CustomField>
    <fullName>Fees_and_credits__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fees and credits</label>
    <length>255</length>
    <type>Text</type>
</CustomField>