force-app/main/default/objects/Client_Strategy__c/fields/Fertility_Family_Forming_COE__c.field-meta.xml
<CustomField>
    <fullName>Fertility_Family_Forming_COE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fertility Family Forming COE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>