force-app/main/default/objects/Client_Strategy__c/fields/GLP_1_obesity_management_reqs__c.field-meta.xml
<CustomField>
    <fullName>GLP_1_obesity_management_reqs__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GLP-1 obesity management reqs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>