force-app/main/default/objects/Client_Strategy__c/fields/GLP_1_Reqs_Write_In__c.field-meta.xml
<CustomField>
    <fullName>GLP_1_Reqs_Write_In__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GLP-1 Reqs Write In</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>