force-app/main/default/objects/Client_Strategy__c/fields/Guarantees__c.field-meta.xml
<CustomField>
    <fullName>Guarantees__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Guarantees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>