force-app/main/default/objects/Client_Strategy__c/fields/Health_Equity__c.field-meta.xml
<CustomField>
    <fullName>Health_Equity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Health Equity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>