force-app/main/default/objects/Client_Strategy__c/fields/Health_risk_assessment__c.field-meta.xml
<CustomField>
    <fullName>Health_risk_assessment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Health Risk Assessment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>