force-app/main/default/objects/Client_Strategy__c/fields/Healthy_workplace__c.field-meta.xml
<CustomField>
    <fullName>Healthy_workplace__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Healthy workplace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>