force-app/main/default/objects/Client_Strategy__c/fields/How_are_Rewards_distributed__c.field-meta.xml
<CustomField>
    <fullName>How_are_Rewards_distributed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>How are Rewards distributed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>