force-app/main/default/objects/Client_Strategy__c/fields/How_is_client_covering_GLP_1s__c.field-meta.xml
<CustomField>
    <fullName>How_is_client_covering_GLP_1s__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>How is client covering GLP-1s</label>
    <length>255</length>
    <type>Text</type>
</CustomField>