force-app/main/default/objects/Client_Strategy__c/fields/ICHRA_plan__c.field-meta.xml
<CustomField>
    <fullName>ICHRA_plan__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ICHRA plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>