force-app/main/default/objects/Client_Strategy__c/fields/Important_Features_Write_In__c.field-meta.xml
<CustomField>
    <fullName>Important_Features_Write_In__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ZZ_Important Features Write In</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>