force-app/main/default/objects/Client_Strategy__c/fields/Important_Network_features__c.field-meta.xml
<CustomField>
    <fullName>Important_Network_features__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Important Network features</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>