force-app/main/default/objects/Client_Strategy__c/fields/Important_Value_Factors__c.field-meta.xml
<CustomField>
    <fullName>Important_Value_Factors__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Important Value Factors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>