force-app/main/default/objects/Client_Strategy__c/fields/Innovation__c.field-meta.xml
<CustomField>
    <fullName>Innovation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Innovation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>