force-app/main/default/objects/Client_Strategy__c/fields/Integrated_benefits_provider__c.field-meta.xml
<CustomField>
    <fullName>Integrated_benefits_provider__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Integrated benefits provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>