force-app/main/default/objects/Client_Strategy__c/fields/Integrated_Med_Pharmacy_digital__c.field-meta.xml
<CustomField>
    <fullName>Integrated_Med_Pharmacy_digital__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Integrated Med/Pharmacy digital</label>
    <length>255</length>
    <type>Text</type>
</CustomField>