force-app/main/default/objects/Client_Strategy__c/fields/Integrated_plan_administration__c.field-meta.xml
<CustomField>
    <fullName>Integrated_plan_administration__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Integrated plan administration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>