force-app/main/default/objects/Client_Strategy__c/fields/Integrated_specialty_management__c.field-meta.xml
<CustomField>
    <fullName>Integrated_specialty_management__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Integrated specialty management</label>
    <length>255</length>
    <type>Text</type>
</CustomField>