force-app/main/default/objects/Client_Strategy__c/fields/Integration_across_programs__c.field-meta.xml
<CustomField>
    <fullName>Integration_across_programs__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Integration across programs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>