force-app/main/default/objects/Client_Strategy__c/fields/Intermittent_workforce__c.field-meta.xml
<CustomField>
    <fullName>Intermittent_workforce__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Intermittent workforce</label>
    <length>255</length>
    <type>Text</type>
</CustomField>