force-app/main/default/objects/Client_Strategy__c/fields/Kidney_COE__c.field-meta.xml
<CustomField>
    <fullName>Kidney_COE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Kidney COE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>