force-app/main/default/objects/Client_Strategy__c/fields/LGBTQ_support__c.field-meta.xml
<CustomField>
    <fullName>LGBTQ_support__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LGBTQ+ support</label>
    <length>255</length>
    <type>Text</type>
</CustomField>