force-app/main/default/objects/Client_Strategy__c/fields/Linkage_to_business_measures__c.field-meta.xml
<CustomField>
    <fullName>Linkage_to_business_measures__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Linkage to business measures</label>
    <length>255</length>
    <type>Text</type>
</CustomField>