force-app/main/default/objects/Client_Strategy__c/fields/Maternity_COE__c.field-meta.xml
<CustomField>
    <fullName>Maternity_COE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Maternity COE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>