force-app/main/default/objects/Client_Strategy__c/fields/Max_annual_spouse_partner_reward__c.field-meta.xml
<CustomField>
    <fullName>Max_annual_spouse_partner_reward__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Max annual spouse/partner reward</label>
    <length>255</length>
    <type>Text</type>
</CustomField>