force-app/main/default/objects/Client_Strategy__c/fields/Medication_assisted_weight_loss__c.field-meta.xml
<CustomField>
    <fullName>Medication_assisted_weight_loss__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Medication-assisted weight loss</label>
    <length>255</length>
    <type>Text</type>
</CustomField>