force-app/main/default/objects/Client_Strategy__c/fields/Member_experience_and_engagement__c.field-meta.xml
<CustomField>
    <fullName>Member_experience_and_engagement__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Member experience and engagement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>