force-app/main/default/objects/Client_Strategy__c/fields/Member_experience_integration__c.field-meta.xml
<CustomField>
    <fullName>Member_experience_integration__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Member experience integration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>