force-app/main/default/objects/Client_Strategy__c/fields/Member_savings_opportunities__c.field-meta.xml
<CustomField>
    <fullName>Member_savings_opportunities__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Member savings opportunities</label>
    <length>255</length>
    <type>Text</type>
</CustomField>