force-app/main/default/objects/Client_Strategy__c/fields/Mental_Health_Substance_Disorder__c.field-meta.xml
<CustomField>
    <fullName>Mental_Health_Substance_Disorder__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mental Health/Substance Disorder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>