force-app/main/default/objects/Client_Strategy__c/fields/Musculoskeletal_Spine_Joint_COE__c.field-meta.xml
<CustomField>
    <fullName>Musculoskeletal_Spine_Joint_COE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Musculoskeletal Spine &amp; Joint COE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>