force-app/main/default/objects/Client_Strategy__c/fields/NA_New_program__c.field-meta.xml
<CustomField>
    <fullName>NA_New_program__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NA - New program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>