force-app/main/default/objects/Client_Strategy__c/fields/Neonatal_COE__c.field-meta.xml
<CustomField>
    <fullName>Neonatal_COE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Neonatal COE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>