force-app/main/default/objects/Client_Strategy__c/fields/Network_Access__c.field-meta.xml
<CustomField>
    <fullName>Network_Access__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Network Access</label>
    <length>255</length>
    <type>Text</type>
</CustomField>