force-app/main/default/objects/Client_Strategy__c/fields/Network_design__c.field-meta.xml
<CustomField>
    <fullName>Network_design__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Network design</label>
    <length>255</length>
    <type>Text</type>
</CustomField>