force-app/main/default/objects/Client_Strategy__c/fields/Network_discounts__c.field-meta.xml
<CustomField>
    <fullName>Network_discounts__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Network discounts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>