force-app/main/default/objects/Client_Strategy__c/fields/Non_UHC_Optum_wellness_reasons__c.field-meta.xml
<CustomField>
    <fullName>Non_UHC_Optum_wellness_reasons__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Non-UHC/Optum wellness reasons</label>
    <length>255</length>
    <type>Text</type>
</CustomField>