force-app/main/default/objects/Client_Strategy__c/fields/Offered_wellness_initiatives__c.field-meta.xml
<CustomField>
    <fullName>Offered_wellness_initiatives__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Offered wellness initiatives</label>
    <length>255</length>
    <type>Text</type>
</CustomField>