force-app/main/default/objects/Client_Strategy__c/fields/On_site_near_site_clinics__c.field-meta.xml
<CustomField>
    <fullName>On_site_near_site_clinics__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>On-site / near site clinics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>