force-app/main/default/objects/Client_Strategy__c/fields/Online_tools_apps_videos_webinars__c.field-meta.xml
<CustomField>
    <fullName>Online_tools_apps_videos_webinars__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Online tools–apps,videos,webinars</label>
    <length>255</length>
    <type>Text</type>
</CustomField>