force-app/main/default/objects/Client_Strategy__c/fields/Onsite_health_specialist__c.field-meta.xml
<CustomField>
    <fullName>Onsite_health_specialist__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Onsite health specialist</label>
    <length>255</length>
    <type>Text</type>
</CustomField>