force-app/main/default/objects/Client_Strategy__c/fields/Openness_to_communication_advice__c.field-meta.xml
<CustomField>
    <fullName>Openness_to_communication_advice__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Openness to communication advice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>