force-app/main/default/objects/Client_Strategy__c/fields/Other_reward_distribution_method__c.field-meta.xml
<CustomField>
    <fullName>Other_reward_distribution_method__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other reward distribution method</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>