force-app/main/default/objects/Client_Strategy__c/fields/Other_wellness_incentives__c.field-meta.xml
<CustomField>
    <fullName>Other_wellness_incentives__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other wellness incentives</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>