force-app/main/default/objects/Client_Strategy__c/fields/Participation_in_wellness_program__c.field-meta.xml
<CustomField>
    <fullName>Participation_in_wellness_program__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Participation in wellness program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>