force-app/main/default/objects/Client_Strategy__c/fields/Pediatric_focused_mental_health_sup__c.field-meta.xml
<CustomField>
    <fullName>Pediatric_focused_mental_health_sup__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pediatric focused mental health sup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>