force-app/main/default/objects/Client_Strategy__c/fields/Peer_Support__c.field-meta.xml
<CustomField>
    <fullName>Peer_Support__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Peer Support</label>
    <length>255</length>
    <type>Text</type>
</CustomField>