force-app/main/default/objects/Client_Strategy__c/fields/Physical_activity_challenges__c.field-meta.xml
<CustomField>
    <fullName>Physical_activity_challenges__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Physical activity challenges</label>
    <length>255</length>
    <type>Text</type>
</CustomField>