force-app/main/default/objects/Client_Strategy__c/fields/Plan_design__c.field-meta.xml
<CustomField>
    <fullName>Plan_design__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plan design</label>
    <length>255</length>
    <type>Text</type>
</CustomField>