force-app/main/default/objects/Client_Strategy__c/fields/Planned_changes_to_wellness_program__c.field-meta.xml
<CustomField>
    <fullName>Planned_changes_to_wellness_program__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Planned changes to wellness program</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>