force-app/main/default/objects/Client_Strategy__c/fields/Point_of_Sale_Rebates__c.field-meta.xml
<CustomField>
    <fullName>Point_of_Sale_Rebates__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Point of Sale Rebates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>