force-app/main/default/objects/Client_Strategy__c/fields/Population_health_management_report__c.field-meta.xml
<CustomField>
    <fullName>Population_health_management_report__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Population health management report</label>
    <length>255</length>
    <type>Text</type>
</CustomField>