force-app/main/default/objects/Client_Strategy__c/fields/POS_tiering__c.field-meta.xml
<CustomField>
    <fullName>POS_tiering__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>POS tiering</label>
    <length>255</length>
    <type>Text</type>
</CustomField>